platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/traces/exam.exams-curated-exam02-v1.01571d61.attempt.038/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/exam.exams-curated-exam02-v1.01571d61.attempt.038/submission/volume_cube.c: In function 'volume_cube':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/exam.exams-curated-exam02-v1.01571d61.attempt.038/submission/volume_cube.c:2:23: error: expected ';' before '}' token
    2 |     return (a * a * a)
      |                       ^
      |                       ;
    3 | }
      | ~                      
